<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:padding="10dp"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/location_rationale"
        android:textAppearance="?android:textAppearance"
        android:layout_marginTop="10dp"
        tools:text="@string/location_rationale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/call_log_rationale"
        android:textAppearance="?android:textAppearance"
        android:layout_marginTop="5dp"
        tools:text="@string/call_log_rationale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textAppearance="?android:textAppearance"
        android:text="@string/ill_be_watching_you"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>